--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
         }
 
         .lyrics-container {
-            padding: 1rem;
-            line-height: 1.8;
-            font-size: 1.1rem;
-        }
+    white-space: pre-line; /* This ensures line breaks are rendered */
+    line-height: 1.8;
+    font-size: 1.1rem;
+}
 
         .loading-container {
             text-align: center;
