--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                     id: song.id || `song-${index}`,
                     title: song.title || 'Untitled Song',
                     content: song.content || '',
-                    author: song.author || 'Unknown',
+                    author: song.author || 'தெரியவில்லை',
                     searchText: `${song.title} ${song.content}`.toLowerCase()
                 }));
                 
