--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 ref: "எபிரெயர் 13:5"
             },
             {
-                text: "கர்த்தரை நோக்கி உங்கள் வழிகளை ஒப்புக்கொள்ளுங்கள்; அவர் உங்களை நடத்துவார்",
+                text: "உன் வழியைக் கர்த்தருக்கு ஒப்புவித்து, அவர்மேல் நம்பிக்கையாயிரு; அவரே காரியத்தை வாய்க்கப்பண்ணுவார்.",
                 ref: "சங்கீதம் 37:5"
             },
             {
