--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>தமிழ் கிறிஸ்தவ பாடல் புத்தகம்</title>
+    <title>புதிய எருசலேம் சபை பாடல் புத்தகம்</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Tamil:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
