--- a/index.html
+++ b/index.html
@@ -334,7 +334,8 @@
         <!-- About Us Section -->
         <div id="about-us" class="about-us" style="display: none;">
             <h2>எங்களைப் பற்றி</h2>
-            <p>இந்த பாடல் புத்தகம் தமிழ் கிறிஸ்தவ சமூகத்திற்காக உருவாக்கப்பட்டது. எங்கள் நோக்கம் பாடல்கள் மூலம் ஆன்மீக பலத்தையும் ஊக்கத்தையும் வழங்குவதாகும்.</p>
+            <p></p>
+            <p>இந்த பாடல் புத்தகம் "புதிய எருசலேம் சபை", பெல்ஜியம் கிளையினால் உருவாக்கப்பட்டது. சபையில் பாடப்படும் மற்றும் புதிய பாடல்களும் பதிவேற்றம் செய்யப்படும். தேவனை துதிப்போம். நன்மைகளை பெறுவோம்,</p>
         </div>
 
         <!-- Modal -->
